--- a/css/sass/partials/_grid-styles.scss
+++ b/css/sass/partials/_grid-styles.scss
@@ -1,10 +1,28 @@
-.work-blocks {
-  position: relative;
-  height:12em;
-  width: 18em;
-  overflow: hidden;
-}
+#block-container{
+    margin-top: 4em;
 
+}
+// Grid block
+.work-blocks {
+    position: relative;
+    height:20em;
+    max-width: 24em;
+    margin-bottom: 3em;
+
+}
+// Grid images
+.work-img{
+    height:20em;
+    width: 30em;
+    object-fit: cover;
+    object-position: top center;
+    border-radius: .25em;
+
+}
+#portfolio-img{
+    object-position: top left;
+}
+// Text appears on hover
 .work-hidden-p {
   position: absolute;
   top: 0;
@@ -12,9 +30,10 @@
   left: 0;
   right: 0;
   margin-bottom: 0;
-  padding-top: 4em;
-  background:rgba(200, 200, 255, 0.6);
-  color: #ddd;
+  padding-top: 6em;
+  background:rgba(255, 254, 252, 0.8);
+  color: #605A4D;
+  font-size: 1.5em;
   visibility: hidden;
   opacity: 0;
   transition: ease-in 200ms;
@@ -23,9 +42,18 @@
 
 }
 
-
+// Grid block hover
 .work-blocks:hover .work-hidden-p {
   visibility: visible;
   opacity: 1;
 }
 //http://stackoverflow.com/questions/14263594/how-to-show-text-on-image-when-hovering
+
+// Small Screen
+@media screen and (max-width: 39.9375em)  {
+    #block-container{
+        margin-top: 4em;
+        margin-left: 1em;
+        margin-right: 1em;
+    }
+}
