--- a/css/sass/partials/_header-top-main.scss
+++ b/css/sass/partials/_header-top-main.scss
@@ -1,63 +1,54 @@
-header{
+header {
     height: 20em;
-}
-#logo-img{
-    height: 8em;
-    width:8em;
-    margin-left: 8em;
     margin-top: 4em;
 }
-.menu{
-    float: right;
-    margin-right: 8em;
-    margin-top: 5em;
+#logo-img {
+    height: 8em;
+    width: 8em;
 }
-.menu-item{
+.menu {
+    float: right;
+    margin-top: 4em;
+}
+.menu-item {
     font-size: 1.5em;
-    margin-right: .5em;
+    margin-right: 0.5em;
     color: #505053;
 }
-.menu-item:active, .menu-item:hover{
+.menu-item:active,
+.menu-item:hover {
     text-decoration: underline;
     color: #497E9A;
 }
-#brief-p{
-    margin-top: 8em;
-    margin-bottom: 4em;
+#brief-p {
+    margin-top: 3em;
+    margin-bottom: 5em;
     text-align: center;
     font-size: 1.5em;
 }
 // Medium Screen
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
-    #logo-img{
-        width: 100%;
-
-        margin-left: 0;
+    header {
+        margin-top: 0;
     }
-    .menu{
-        width: 100%;
-        margin-top: 2em;
-        margin-right: 0;
-        padding-left:25%;
+    #brief-p{
+        margin-top: 0;
     }
 }
-
 // Small Screen
-@media screen and (max-width: 39.9375em)  {
-
-    #logo-img{
-        margin-top: 1em;
-        margin-left: 0;
-        width: 100%;
+@media screen and (max-width: 39.9375em) {
+    header {
+        margin-top: 0;
     }
-    .menu{
+    .menu {
         float: left;
-        margin-top:.5em;
-        margin-left: 1em;
+        margin-top: 0.5em;
+        // margin-left: 1em;
     }
-    .menu-item{
-        margin-top: 1em;
-        margin-right: .25em;
-
+    .menu-item {
+        margin-top: 0.5em;
+    }
+    #brief-p{
+        margin-top:0;
     }
 }
