--- a/css/stylesheets/custom.css
+++ b/css/stylesheets/custom.css
@@ -8,6 +8,9 @@ body {
 a {
   text-decoration: none; }
 
+main {
+  margin-top: 3em; }
+
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -2195,58 +2198,52 @@ a {
   clip: auto; }
 
 header {
-  height: 20em; }
+  height: 20em;
+  margin-top: 4em; }
 
 #logo-img {
   height: 8em;
-  width: 8em;
-  margin-left: 8em;
-  margin-top: 4em; }
+  width: 8em; }
 
 .menu {
   float: right;
-  margin-right: 8em;
-  margin-top: 5em; }
+  margin-top: 4em; }
 
 .menu-item {
   font-size: 1.5em;
-  margin-right: .5em;
+  margin-right: 0.5em;
   color: #505053; }
 
-.menu-item:active, .menu-item:hover {
+.menu-item:active,
+.menu-item:hover {
   text-decoration: underline;
   color: #497E9A; }
 
 #brief-p {
-  margin-top: 8em;
-  margin-bottom: 4em;
+  margin-top: 3em;
+  margin-bottom: 5em;
   text-align: center;
   font-size: 1.5em; }
 
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
-  #logo-img {
-    width: 100%;
-    margin-left: 0; }
+  header {
+    margin-top: 0; }
 
-  .menu {
-    width: 100%;
-    margin-top: 2em;
-    margin-right: 0;
-    padding-left: 25%; } }
+  #brief-p {
+    margin-top: 0; } }
 @media screen and (max-width: 39.9375em) {
-  #logo-img {
-    margin-top: 1em;
-    margin-left: 0;
-    width: 100%; }
+  header {
+    margin-top: 0; }
 
   .menu {
     float: left;
-    margin-top: .5em;
-    margin-left: 1em; }
+    margin-top: 0.5em; }
 
   .menu-item {
-    margin-top: 1em;
-    margin-right: .25em; } }
+    margin-top: 0.5em; }
+
+  #brief-p {
+    margin-top: 0; } }
 #block-container {
   margin-top: 4em; }
 
@@ -2260,8 +2257,7 @@ header {
   height: 20em;
   width: 30em;
   object-fit: cover;
-  object-position: top center;
-  border-radius: .25em; }
+  object-position: top center; }
 
 #portfolio-img {
   object-position: top left; }
@@ -2287,14 +2283,14 @@ header {
   visibility: visible;
   opacity: 1; }
 
+@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+  #block-container {
+    margin-left: 2em; } }
 @media screen and (max-width: 39.9375em) {
   #block-container {
     margin-top: 4em;
     margin-left: 1em;
     margin-right: 1em; } }
-main {
-  margin-top: 5em; }
-
 #about-p {
   text-align: center;
   font-size: 1.5em; }
@@ -2345,4 +2341,11 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   margin-left: .5em; }
 
 .form-error {
-  margin-top: 2em !important; }
+  margin-top: 1em !important; }
+
+.portfolio-sect {
+  margin-bottom: 4em; }
+
+.portfolio-p {
+  text-align: center;
+  margin-bottom: 4em; }
