About and Portfolio sections

--- a/css/sass/partials/_grid-styles.scss
+++ b/css/sass/partials/_grid-styles.scss
@@ -9,6 +9,7 @@
     max-width: 24em;
     margin-bottom: 3em;
 
+
 }
 // Grid images
 .work-img{
@@ -16,6 +17,7 @@
     width: 30em;
     object-fit: cover;
     object-position: top center;
+    border-radius: .15em;
 
 }
 #portfolio-img{
