--- a/css/sass/partials/_about.scss
+++ b/css/sass/partials/_about.scss
@@ -2,4 +2,10 @@
 #about-p{
     text-align: center;
     font-size: 1.5em;
+    margin-bottom: 2em;
+}
+#resume{
+    font-size: 1.5em;
+    margin-bottom: 2em;
+    text-align: center;
 }
