--- a/css/sass/custom.scss
+++ b/css/sass/custom.scss
@@ -1,15 +1,16 @@
-
+$accent: #560682;
 body{
     outline: none;
 	font-family: 'Open Sans', sans-serif;
 	color: #61666D;
     background-color: #FFFEFC;
 }
+
 a{
     text-decoration: none;
 }
 main{
-    margin-top: 3em;
+    margin-top: 2em;
 }
 
 @import "compass";
