--- a/css/sass/partials/_contact.scss
+++ b/css/sass/partials/_contact.scss
@@ -1,4 +1,6 @@
 $contact-grey: #505053;
+$accent: #560682;
+
 // Input Divs
 .form-group {
 	margin-bottom: 1em;
@@ -43,11 +45,14 @@ input:-ms-input-placeholder,textarea:-ms-input-placeholder {
 	padding-top: 0.5em;
 	height: 9em;
 }
+
+// Send message button
 #send-message{
-    background-color: #497E9A;
+    background-color: $accent;
 }
+// Send message button hover and active
 #send-message:hover, #send-message:active{
-    background-color: darken(#497E9A, 10%);
+    background-color: darken($accent, 10%);
 }
 #airplane{
     margin-left: .5em;
@@ -55,4 +60,23 @@ input:-ms-input-placeholder,textarea:-ms-input-placeholder {
 
 .form-error{
     margin-top: 1em!important;
+}
+#thanks-p{
+	margin-top: 2em;
+	text-align: center;
+	margin-bottom: 2em;
+}
+// Medium Screen
+@media screen and (min-width: 40em) and (max-width: 63.9375em) {
+    #thanks-p{
+        
+    }
+}
+
+// Small Screen
+@media screen and (max-width: 39.9375em)  {
+    #thanks-p{
+        margin-top: 5em;
+
+    }
 }
