--- a/css/sass/partials/_grid-styles.scss
+++ b/css/sass/partials/_grid-styles.scss
@@ -20,6 +20,8 @@
     border-radius: .15em;
 
 }
+
+
 #portfolio-img{
     object-position: top left;
 }
@@ -61,7 +63,7 @@
 @media screen and (max-width: 39.9375em)  {
     #block-container{
         margin-top: 4em;
-        margin-left: 1em;
+        margin-left: 10%;
         margin-right: 1em;
     }
 }
