--- a/css/stylesheets/custom.css
+++ b/css/stylesheets/custom.css
@@ -2302,7 +2302,7 @@ header {
 @media screen and (max-width: 39.9375em) {
   #block-container {
     margin-top: 4em;
-    margin-left: 1em;
+    margin-left: 10%;
     margin-right: 1em; } }
 #about-p {
   text-align: center;
